# veritas

./: .gitignore  Cargo.toml  README.md  auto-bench.py  cutegames-config-cpuct-tune.json  cutegames-config.json  datagen.sh  full_log.txt  least.json  model.onnx  most.json  prior-work.md  random.json  sanctaphraxx-material.json  startpos.txt  stronsay-exports.sh  test.json  test.pgn  tiktaxx.json
books/: ataxx-d2-openings.txt  gomoku9x9-d2-openings.txt
dataformat/: ataxx-data.capnp
src/: arena.rs  batching.rs  datagen.rs  engine.rs  game.rs  main.rs  node.rs  params.rs  pleasant.rs  timemgmt.rs  ugi.rs
