[package]
name = "veritas"
version = "0.1.0"
edition = "2021"
description = "An MCTS-PUCT general game player."
license = "MIT"
readme = "README.md"
keywords = ["treesearch"]
categories = ["games"]
repository = "https://github.com/cosmobobak/viridithas"
authors = ["Cosmo Bobak (cosmobobak@gmail.com)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cuda = ["kn-cuda-eval", "kn-cuda-sys"]

[dependencies]
env_logger = "0.10.1"
fastrand = "2.0.1"
gomokugen = { git = "https://github.com/cosmobobak/gomokugen" }
kn-graph = "0.5.0"
log = "0.4.20"
smallvec = "1.12.0"
kn-cuda-eval = { version = "0.5.0", optional = true }
kn-cuda-sys = { version = "0.5.0", optional = true }
