[package]
name = "veritas"
version = "0.1.0"
edition = "2021"
description = "An MCTS-PUCT general game player."
license = "MIT"
readme = "README.md"
keywords = ["treesearch"]
categories = ["games"]
repository = "https://github.com/cosmobobak/viridithas"
authors = ["Cosmo Bobak (cosmobobak@gmail.com)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
fastrand = "2.0.1"
gomokugen = { git = "https://github.com/cosmobobak/gomokugen" }
log = "0.4.20"
smallvec = "1.12.0"
chrono = "0.4.31"
# kn-cuda-sys = "0.6.1"
# kn-cuda-eval = "0.6.1"
# kn-graph = "0.6.1"
kn-graph = { path = "../Kyanite/kn-graph" }
kn-cuda-eval = { path = "../Kyanite/kn-cuda-eval" }
kn-cuda-sys = { path = "../Kyanite/kn-cuda-sys" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rand = "0.8.5"
cozy-chess = { version = "0.3.3", features = ["std"] }

[profile.release]
debug = true
